# hotelli_graafiline_osa

./: CMakeLists.txt  Hotelli_Broneering.pro  README.md  hotell.cpp  hotell.h  hotell.ui  main.cpp  ruumid.cpp  ruumid.h
